--- a/ExitDialog/src/main/res/drawable/blank_green_stroke_button_background.xml
+++ b/ExitDialog/src/main/res/drawable/blank_green_stroke_button_background.xml
@@ -5,8 +5,8 @@
         <layer-list>
             <item android:bottom="0dp" android:left="0dp" android:right="0dp" android:top="0dp">
                 <shape android:shape="rectangle">
-                    <corners  android:radius="5dp"/>
-                    <solid android:color="#7DFF0000" />
+                    <corners android:radius="50dp" />
+                    <solid android:color="#50FF0000" />
                     <padding android:bottom="0dp" android:left="0dp" android:right="0dp" android:top="0dp" />
                     <size android:width="0dp" android:height="0dp" />
                 </shape>
@@ -18,11 +18,9 @@
         <layer-list>
             <item android:bottom="0dp" android:left="0dp" android:right="0dp" android:top="0dp">
                 <shape android:shape="rectangle">
-                    <solid android:color="#00000000"/>
-                    <stroke
-                        android:color="@color/fabColor"
-                        android:width="0dp"/>
-                    <corners  android:radius="5dp"/>
+                    <solid android:color="#00000000" />
+                    <stroke android:width="0dp" android:color="@color/fabColor" />
+                    <corners android:radius="50dp" />
                     <padding android:bottom="0dp" android:left="0dp" android:right="0dp" android:top="0dp" />
                     <size android:width="0dp" android:height="0dp" />
                 </shape>
