--- a/ExitDialog/src/main/res/layout/exit_dialog_layout_custom.xml
+++ b/ExitDialog/src/main/res/layout/exit_dialog_layout_custom.xml
@@ -63,7 +63,7 @@
                 android:gravity="center_horizontal">
 
                 <TextView
-                    android:id="@+id/cancelx"
+                    android:id="@+id/cance_tv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="15dp"
@@ -79,7 +79,7 @@
 
 
                 <TextView
-                    android:id="@+id/okx"
+                    android:id="@+id/ok_tv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="15dp"
