--- a/ExitDialog/src/main/res/layout/exit_dialog_layout_material.xml
+++ b/ExitDialog/src/main/res/layout/exit_dialog_layout_material.xml
@@ -55,35 +55,33 @@
             android:layout_margin="22dp"
             android:gravity="center_horizontal">
 
-            <TextView
+            <Button
                 android:id="@+id/cance_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="15dp"
-                android:background="@drawable/blank_green_stroke_button_background"
+                    style="@style/Widget.Material3.Button.TextButton"
                 android:paddingLeft="14dp"
                 android:paddingTop="7dp"
                 android:paddingRight="14dp"
                 android:paddingBottom="7dp"
                 android:text="@string/cancel"
-                android:textColor="@color/fabColor"
-                android:textSize="16sp"
+                 android:textSize="16sp"
                 android:textStyle="bold" />
 
 
-            <TextView
+            <Button
                 android:id="@+id/ok_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
-                android:background="@drawable/green_fill_button_background"
+                    style="@style/Widget.Material3.Button"
                 android:paddingLeft="30dp"
                 android:paddingTop="8dp"
                 android:paddingRight="30dp"
                 android:paddingBottom="8dp"
                 android:text="@string/exit"
-                android:textColor="#fff"
-                android:textSize="16sp"
+                 android:textSize="16sp"
                 android:textStyle="bold" />
         </LinearLayout>
 
