--- a/ExitDialog/src/main/res/drawable/blank_green_stroke_button_background.xml
+++ b/ExitDialog/src/main/res/drawable/blank_green_stroke_button_background.xml
@@ -19,7 +19,7 @@
             <item android:bottom="0dp" android:left="0dp" android:right="0dp" android:top="0dp">
                 <shape android:shape="rectangle">
                     <solid android:color="#00000000" />
-                    <stroke android:width="0dp" android:color="@color/fabColor" />
+                    <stroke android:width="0dp" android:color="?colorPrimary" />
                     <corners android:radius="50dp" />
                     <padding android:bottom="0dp" android:left="0dp" android:right="0dp" android:top="0dp" />
                     <size android:width="0dp" android:height="0dp" />
