--- a/ExitDialog/src/main/res/layout/exit_dialog_layout_material.xml
+++ b/ExitDialog/src/main/res/layout/exit_dialog_layout_material.xml
@@ -56,35 +56,37 @@
             android:gravity="center_horizontal">
 
             <Button
-                android:id="@+id/cance_tv"
+                android:id="@+id/btn_cancel"
+                style="@style/Widget.Material3.Button.IconButton.Outlined"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="15dp"
-                    style="@style/Widget.Material3.Button.TextButton"
-                android:paddingLeft="14dp"
-                android:paddingTop="7dp"
-                android:paddingRight="14dp"
-                android:paddingBottom="7dp"
+                android:paddingLeft="20dp"
+                android:paddingTop="8dp"
+                android:paddingRight="20dp"
+                android:paddingBottom="8dp"
                 android:text="@string/cancel"
-                 android:textSize="16sp"
-                android:textStyle="bold" />
+                android:textSize="16sp"
+                android:textStyle="normal"
+                app:iconGravity="textStart"
+                app:iconPadding="0dp"
+                app:iconTint="?attr/colorOnSurface" />
 
 
             <Button
-                android:id="@+id/ok_tv"
+                android:id="@+id/btn_exit"
+                style="@style/Widget.Material3.Button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
-                    style="@style/Widget.Material3.Button"
                 android:paddingLeft="30dp"
                 android:paddingTop="8dp"
                 android:paddingRight="30dp"
                 android:paddingBottom="8dp"
                 android:text="@string/exit"
-                 android:textSize="16sp"
+                android:textSize="16sp"
                 android:textStyle="bold" />
         </LinearLayout>
-
 
     </LinearLayout>
 
