--- a/ExitDialog/src/main/res/layout/exit_dialog_layout_custom.xml
+++ b/ExitDialog/src/main/res/layout/exit_dialog_layout_custom.xml
@@ -24,24 +24,6 @@
                 android:layout_gravity="center"
                 app:lottie_loop="true"
                 app:lottie_rawRes="@raw/x38063_log_out" />
-            <!--
-                        <androidx.cardview.widget.CardView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_horizontal"
-                            app:cardElevation="6dp"
-                            android:background="@color/white"
-                            app:cardCornerRadius="20dp">
-
-                            <ImageView
-                                android:layout_width="80dp"
-                                android:layout_gravity="center_horizontal"
-                                android:src="@mipmap/ic_launcher"
-                                android:background="@color/white"
-                                android:layout_height="80dp"/>
-
-                        </androidx.cardview.widget.CardView>
-            -->
 
             <TextView
                 android:id="@+id/exit_tittlex"
@@ -55,7 +37,6 @@
                 android:textColor="@color/DayBlack_NightWhite"
                 android:textSize="20sp" />
 
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -63,23 +44,26 @@
                 android:gravity="center_horizontal">
 
                 <Button
-                    android:id="@+id/cance_tv"
+                    android:id="@+id/btn_cancel"
+                    style="@style/Widget.Material3.Button.IconButton.Outlined"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="15dp"
-                    android:paddingLeft="14dp"
-                    android:paddingTop="7dp"
-                    android:paddingRight="14dp"
-                    android:paddingBottom="7dp"
+                    android:paddingLeft="20dp"
+                    android:paddingTop="8dp"
+                    android:paddingRight="20dp"
+                    android:paddingBottom="8dp"
                     android:text="@string/cancel"
-                    style="@style/Widget.Material3.Button.TextButton"
                     android:textSize="16sp"
-                    android:textStyle="bold" />
+                    android:textStyle="normal"
+                    app:iconGravity="textStart"
+                    app:iconPadding="0dp"
+                    app:iconTint="?attr/colorOnSurface" />
 
 
                 <Button
+                    android:id="@+id/btn_exit"
                     style="@style/Widget.Material3.Button"
-                    android:id="@+id/ok_tv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="15dp"
